0.6.2
- Bugfixes:
  - Windows: Saving session on different drive than data causes ValueError.
  - Memory leak: re-plotting scatter plots (`ControlPanel.OnChangeFilter`)
0.6.1
- Load session: Allow user to select missing data files (#80)
- Sessions: Store relative paths in index file for user convenience (#80)
- Bugfixes:
  - Setting order of plots not possible in Windows (#79)
  - Inability to search measurements due to broken data files (#81)
0.6.0
- Compute mode in statistics tab using Freedman-Diaconis rule (#72)
- Add channels: bounding box x- and y-size
- Display number of events in measurement browser (#70)
- Bugfixes:
  - "KeyError: 'Plotting'" when filtering (#73)
  - "AttributeError" when plotting 2col 1row without legend (#76)
0.5.9
- dclab add channel: distance between two first peaks
- Allow logarithmic plot axes (#56)
- Display fluorescence curve of events (#65)
- Bugfixes:
  - OpenCV version 2 vs 3 variable name differences (CV_CAP_...)
  - Gray dots in PDF export too large (#69)
0.5.8
- dclab add fluorescence channels: peak area, peak position, number of peaks
- dclab add position along channel axis from img
- dclab (0.1.6.dev2): Allow to disable KDE computation
- Allow to change order of plots (#51)
- Implement indexing of events (#49)
- Allow to exclude single events (#47)
- Allow to show excluded events in scatter plot (#52)
- Display cell images in the polygon selection window (#64)
- Bugfixes:
  - Settings panel not redrawn in Ubuntu (#66)
  - Order of plots not reproduced from session (#51)
  - OpenCV version 2 vs 3 changes (#45)
0.5.7
- Bugfixes:
  - Filtering: Plot selection resets to last item unexpectedly
  - User-defined titles were not saved in session
  - Remove ghost images of cells (#18)
  - dclab (0.1.5.dev13): Correct determination of video file
  - dclab (0.1.5.dev14): Multivariate KDE did not work
  - dclab (0.1.5.dev15): "Contour Fix Scale" did not work for Defo
0.5.6
- Add menu option for data export (#22)